translate home page

--- a/audit.html
+++ b/audit.html
@@ -620,7 +620,7 @@
                                 contact your
                                 local member firm, or our global head of tax, <b>Lorem Dolar</b>.
                             </p>
-                            <div class="profile-card my-5">
+                            <!-- <div class="profile-card my-5">
                                 <div class="profile-photo">
                                     <img src="./assets/img/sub-sections/profile-photo.png" alt="">
 
@@ -645,7 +645,7 @@
                                 <a href="./audit-4.html" class="key-services-item fs-2 primary m-2">Nizamnamə
                                     kapitalının
                                     formalaşdırılmasın auditi</a>
-                            </div>
+                            </div> -->
                         </div>
 
                     </div>
