--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               <input type="text" class="search-input">
             </form>
             <a href="#" class="hover-cc primary toggleInput">
-              Find your local member firm
+              Sizin Maliyyə Sabitliyiniz
             </a>
             <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
             <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
@@ -473,8 +473,8 @@
               </div>
             </div>
             <div class="swiper-title">
-              <h1>Environmental, Social and Governance</h1>
-              <p>Overcoming the sustainability barriers</p>
+              <h1>Sürətli, Dəqiq Hesabatlarınızı əldə edin</h1>
+              <p>Audit, Vergi, Maliyyə Hesabatınızın uçotunu bizimlə həll edin</p>
             </div>
           </div>
         </div>
@@ -484,7 +484,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4 mt-5">
-            <h3 class="fs-3 fw-600">Featured global insights</h3>
+            <h3 class="fs-3 fw-600">E-Nəşr</h3>
           </div>
         </div>
       </div>
@@ -500,7 +500,7 @@
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                      <a href="#">
+                      <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
                           Returning your business
                         </p>
@@ -521,7 +521,7 @@
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                      <a href="#">
+                      <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
                           Returning your business
                         </p>
@@ -542,7 +542,7 @@
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                      <a href="#">
+                      <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
                           Returning your business
                         </p>
@@ -563,7 +563,7 @@
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                      <a href="#">
+                      <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
                           Returning your business
                         </p>
@@ -584,7 +584,7 @@
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                      <a href="#">
+                      <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
                           Returning your business
                         </p>
@@ -605,7 +605,7 @@
                     </div>
                     <div class="text-wrapper p-4">
                       <div class="card-tag darkgray">BUSINESS RESILENCE</div>
-                      <a href="#">
+                      <a href="insights.html">
                         <p class="fs-2 primary my-4 fw-600">
                           Returning your business
                         </p>
@@ -743,14 +743,13 @@
       <div class="container">
         <div class="row mx-0 px-0 h-60v align-items-center">
           <div class="col-12 col-lg-5 company-info">
-            <p class="company--slogan fs-2">THE LOREM IPSUM IMPERIUM</p>
-            <p class="company--name">Inside Lorem Master</p>
+            <p class="company--slogan fs-2">Komandamız</p>
+            <p class="company--name">Komandamızla Tanış Olun</p>
             <p class="company--text">
-              Step out of this world if you want to stay alive and type lorem
-              for the rest of your life
+              FA Audit Consulting insanlara inkişaf etmək imkanı verilən gənc və dinamik bir mühitdir.
             </p>
             <a href="team.html">
-              <button class="btndefault btn-w border-w">Step Inside</button>
+              <button class="btndefault btn-w border-w">Tanış ol</button>
             </a>
           </div>
         </div>
@@ -761,30 +760,26 @@
         <div class="row px-0 mx-0">
           <div class="col-12 col-lg-6 primary-bg h-100v d-flex justify-content-center align-items-center px-50">
             <div class="exp-cont grad-container">
-              <p class="title">GRADUATES</p>
-              <p class="info">Unlock your potential</p>
-              <p class="text">
-                Lorem is very fun and charming, if you can learn it you will
-                be victorious
-              </p>
+              <p class="title">Yeni Məzun</p>
+              <p class="info">Potensialınızı bizimlə kəşf edin</p>
+              <p class="text">Yeni məzunlar üçün inkişaf proqramları</p>
               <a class="btn-cont" href="./student-career.html">
                 <button class="btndefault btn-w">
-                  Unlock you potential now
+                  Bizim komandamıza qoşulun
                 </button>
               </a>
             </div>
           </div>
           <div class="col-12 col-lg-6 exp-cont h-100v d-flex justify-content-center align-items-center px-50">
             <div class="exp-cont hires-container">
-              <p class="title">EXPERIENCED HIRES</p>
-              <p class="info">Got the experience?</p>
+              <p class="title">Peşakar Əməkdaş </p>
+              <p class="info"> Peşakarlar üçün vakansiyalar</p>
               <p class="text">
-                Lorem is very fun and charming, if you can learn it you will
-                be victorious
+                Təcrübənizə uyğun iş imkanları
               </p>
               <a class="btn-cont" href="./student-career.html">
                 <button class="btndefault btn-r">
-                  Fullfill your potential
+                  Bizim komandamıza qoşulun
                 </button>
               </a>
             </div>
@@ -881,14 +876,8 @@
           </a>
         </div>
         <div class="col-12 footer-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
-          deleniti debitis minima sapiente? Recusandae, magnam natus! Id nisi,
-          culpa fuga quasi rerum sed sunt enim aut magni voluptatibus nobis
-          nulla. Sint amet vero facilis. Asperiores iure at nihil, in
-          necessitatibus nesciunt? Iste exercitationem dignissimos,
-          praesentium perferendis accusamus facere alias accusantium, dolores
-          explicabo voluptas velit assumenda! Non cupiditate exercitationem a
-          quae.
+          © 2022 FA Audit Consulting - Bütün hüquqlar qorunur. FA Audit Consulting öz müştərilərinə audit, vergi və
+          məsləhətlər xidmətləri göstərir.
         </div>
       </div>
     </div>
