--- a/services-accountment.html
+++ b/services-accountment.html
@@ -577,7 +577,7 @@
                 If you have any questions or would like to find out more about how we can help, please contact your
                 local member firm, or our global head of tax, <b>Lorem Dolar</b>.
               </p>
-              <div class="profile-card my-5">
+              <!-- <div class="profile-card my-5">
                 <div class="profile-photo">
                   <img src="./assets/img/sub-sections/profile-photo.png" alt="">
 
@@ -598,7 +598,7 @@
                 <a href="#" class="key-services-item fs-2 primary m-2">Şirkət rəhbərliyinə xərclər və gəlirlilik
                   haqqında
                   hesabatların hazırlanması</a>
-              </div>
+              </div> -->
             </div>
 
           </div>
