--- a/services-tax.html
+++ b/services-tax.html
@@ -594,7 +594,7 @@
                 If you have any questions or would like to find out more about how we can help, please contact your
                 local member firm, or our global head of tax, <b>Lorem Dolar</b>.
               </p>
-              <div class="profile-card my-5">
+              <!-- <div class="profile-card my-5">
                 <div class="profile-photo">
                   <img src="./assets/img/sub-sections/profile-photo.png" alt="">
 
@@ -614,7 +614,7 @@
                 <a href="services-tax-3.html" class="key-services-item fs-2 primary m-2">Vergi planlaması xidmətləri</a>
                 <a href="services-tax-4.html" class="key-services-item fs-2 primary m-2">Vergi sahəsində sair
                   xidmətlər</a>
-              </div>
+              </div> -->
             </div>
 
           </div>
