--- a/student-career.html
+++ b/student-career.html
@@ -518,79 +518,79 @@
                 <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p>
               </div>
 
-              <div class="side-card-social mb-5 ">
-                <div class="card-info p-4 white-bg mb-4">
-                  <p class=" fw-600 fs-2 ls-2 mb-4 ">
-                    Connect with us
-                  </p>
 
-                  <a href="#" class=" d-flex align-items-center primary ">
-                    <i class="fab fa-twitter fs-1-7  me-3 "></i>
-                    <p class="fs-1-7 "> Twitter</p>
-                  </a>
-                  <a href="#" class=" d-flex align-items-center primary  ">
-                    <i class="fab fa-facebook fs-1-7  me-3"></i>
-                    <p class="fs-1-7"> Facebook</p>
-                  </a>
-                </div>
-                <div class="card-info p-4 secondary-bg">
-                  <p class=" fw-600 fs-2 ls-2 mb-4 white">
-                    FAQS
-                  </p>
+              <div class="card-info p-4 white-bg mb-4">
+                <p class=" fw-600 fs-2 ls-2 mb-4 ">
+                  Connect with us
+                </p>
 
-                  <a href="#" class=" d-flex align-items-center white fs-2 text-underline">
-                    Want to learn more about working at FA Consulting? Read our FAQs
-                  </a>
+                <a href="#" class=" d-flex align-items-center primary ">
+                  <i class="fab fa-twitter fs-1-7  me-3 "></i>
+                  <p class="fs-1-7 "> Twitter</p>
+                </a>
+                <a href="#" class=" d-flex align-items-center primary  ">
+                  <i class="fab fa-facebook fs-1-7  me-3"></i>
+                  <p class="fs-1-7"> Facebook</p>
+                </a>
+              </div>
+              <div class="card-info p-4 secondary-bg">
+                <p class=" fw-600 fs-2 ls-2 mb-4 white">
+                  FAQS
+                </p>
 
-                </div>
+                <a href="#" class=" d-flex align-items-center white fs-2 text-underline">
+                  Want to learn more about working at FA Consulting? Read our FAQs
+                </a>
 
               </div>
 
-
-              <p class="fw-600 fs-3 main-title mt-5">
-                Going beyond is what makes FA Consulting different. And what
-                clients value most.
-              </p>
-              <p class="fw-600 fs-3 main-title my-5">
-                We make business personal.
-              </p>
-              <p class="text fs-2 my-5">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
-                a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
-                quibusdam sint dolor voluptatem excepturi corporis. Expedita
-                delectus non qui vitae velit omnis corrupti ducimus, quas
-                consequatur sequi blanditiis autem deserunt harum architecto
-                iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
-                praesentium ipsam ratione harum!
-              </p>
-              <ul class="ms-4 my-3">
-                <p class="fw-600 ls-2 fs-2-5 my-3"> Transform Value</p>
-                <li class="fs-1-9 fw-500 my-3">
-                  Define strategic goals and formulate solutions that keep you ahead of disruptive change
-                </li>
-                <li class="fs-1-9 fw-500 my-3">
-                  Help you sustain and finance growth, manage risk and talent, optimise operations and protect value
-                </li>
-                <li class="fs-1-9 fw-500 my-3">
-                  Improve financial processes and systems, reduce costs and transform your finance function
-                </li>
-                <li class="fs-1-9 fw-500 my-3">
-                  Remove the burden of back office operations and compliance challenges, enabling you to focus on growth
-                </li>
-                <li class="fs-1-9 fw-500 my-3">
-                  Deliver systematic improvements across people, processes and technology, right through the supply
-                  chain
-                </li>
-                <li class="fs-1-9 fw-500 my-3">
-                  Engage, specify and deliver scalable technology solutions
-                </li>
-              </ul>
+            </div> -->
 
 
-            </div>
+            <p class="fw-600 fs-3 main-title mt-5">
+              Going beyond is what makes FA Consulting different. And what
+              clients value most.
+            </p>
+            <p class="fw-600 fs-3 main-title my-5">
+              We make business personal.
+            </p>
+            <p class="text fs-2 my-5">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
+              a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
+              quibusdam sint dolor voluptatem excepturi corporis. Expedita
+              delectus non qui vitae velit omnis corrupti ducimus, quas
+              consequatur sequi blanditiis autem deserunt harum architecto
+              iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
+              praesentium ipsam ratione harum!
+            </p>
+            <ul class="ms-4 my-3">
+              <p class="fw-600 ls-2 fs-2-5 my-3"> Transform Value</p>
+              <li class="fs-1-9 fw-500 my-3">
+                Define strategic goals and formulate solutions that keep you ahead of disruptive change
+              </li>
+              <li class="fs-1-9 fw-500 my-3">
+                Help you sustain and finance growth, manage risk and talent, optimise operations and protect value
+              </li>
+              <li class="fs-1-9 fw-500 my-3">
+                Improve financial processes and systems, reduce costs and transform your finance function
+              </li>
+              <li class="fs-1-9 fw-500 my-3">
+                Remove the burden of back office operations and compliance challenges, enabling you to focus on growth
+              </li>
+              <li class="fs-1-9 fw-500 my-3">
+                Deliver systematic improvements across people, processes and technology, right through the supply
+                chain
+              </li>
+              <li class="fs-1-9 fw-500 my-3">
+                Engage, specify and deliver scalable technology solutions
+              </li>
+            </ul>
+
 
           </div>
+
         </div>
+      </div>
       </div>
 
     </section>
