--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@
               <p class="title">Yeni Məzun</p>
               <p class="info">Potensialınızı bizimlə kəşf edin</p>
               <p class="text">Yeni məzunlar üçün inkişaf proqramları</p>
-              <a class="btn-cont" href="./student-career.html">
+              <a class="btn-cont" href="./student-career-1.html">
                 <button class="btndefault btn-w">
                   Bizim komandamıza qoşulun
                 </button>
@@ -777,7 +777,7 @@
               <p class="text">
                 Təcrübənizə uyğun iş imkanları
               </p>
-              <a class="btn-cont" href="./student-career.html">
+              <a class="btn-cont" href="./student-career-2.html">
                 <button class="btndefault btn-r">
                   Bizim komandamıza qoşulun
                 </button>
