--- a/student-career.html
+++ b/student-career.html
@@ -512,7 +512,7 @@
 
           </div>
           <div class="col-12 col-lg-9 ">
-            <div class="service-card-container d-flex flex-wrap">
+            <!-- <div class="service-card-container d-flex flex-wrap">
               <div class="main-card">
                 <p class="fs-2 fw-500 ls-2 primary">Students</p>
                 <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p>
@@ -544,7 +544,7 @@
 
               </div>
 
-            </div> -->
+            </div>  -->
 
 
             <p class="fw-600 fs-3 main-title mt-5">
