--- a/foreign-custom.html
+++ b/foreign-custom.html
@@ -448,8 +448,9 @@
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Audit</p>
-                        <p class="fs-1-9 primary hover-cc custom-before ms-5">Vergi hesabatlarının auditi</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Məsləhət</p>
+                        <p class="fs-1-9 primary hover-cc custom-before ms-5">Muhasibat uçotunun aparılması üzrə autsors
+                            xidməti</p>
                     </div>
                 </div>
             </div>
@@ -457,7 +458,7 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6   fw-600 service-title">Vergi auditi xidmətləri</div>
+                    <div class="col-6   fw-600 service-title">Xarici ticarət və gömrük xidmətləri</div>
 
                 </div>
             </div>
@@ -516,7 +517,7 @@
                                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
                             </div>
                             <div class="nav-drop-menu my-2">
-                                <a href="./foreign-custom.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici
+                                <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici
                                     ticarət və
                                     gömrük xidmətləri</a>
                             </div>
@@ -553,23 +554,21 @@
                     </div>
                     <div class="col-12 col-lg-7 text-area pl-80">
                         <p class="fs-2-5 fw-600 my-3">
-                            Vergi hesablarınızı FA Audit Consulting həll etsin
+                            Qlobal ticarət əməliyyatlarınızı bizimlə dəyişdirin
                         </p>
                         <p class="fs-1-7  ls-2 lh-30">
-                            Vergi auditi FA Audit Consulting firması tərəfindən şirkətin bütün qüvvədə olan qaydalara
-                            uyğun olaraq korporativ gəlir vergisini düzgün hesablayıb təqdim edib-etmədiyini yoxlamaq
-                            üçün həyata keçirilən xüsusi yoxlamadır. Yoxlamanın sonunda vergi orqanına vergi uyğunluğu
-                            yoxlaması haqqında lazım olan akt verilir.
+                            Ticarətin idarə edilməsi proqramınız dəyişən qaydalara, texnologiyaya və təchizat
+                            zəncirlərinə uyğundurmu? Bazarda lider olan qlobal ticarət komandamız gömrük idarəçiliyi,
+                            ixrac nəzarəti, sanksiyalar və ticarət proqramlarını modernləşdirmək üçün texnologiyadan
+                            istifadə sahəsində geniş təcrübəyə malikdir. Ticarət və biznes fəaliyyətlərinizi səmərəli,
+                            effektiv və uyğun saxlayaraq dəyişən bazara cavab verin.
                         </p>
-
                         <p class="fs-1-7  ls-2 lh-30 my-5">
-                            Vergiyə uyğunluq yoxlaması üçün həyata keçirilən audit prosedurları maliyyə hesabatı
-                            yoxlamalarından onunla fərqlənir ki, işlərin əksəriyyəti xərc çeklərinin nəzərdən
-                            keçirilməsinə və Şirkətin gəlir vergisi qanun və qaydalarına uyğunluğunun yoxlanmasına
-                            yönəlib.
+                            Qlobal ticarətin effektiv idarə edilməsi şirkətin qlobal təchizat zəncirini təmin etmək üçün
+                            çox vacibdir. Bu gün artan ticarət mürəkkəbliyi və ticarət siyasətlərinin tətbiqi ilə aktual
+                            qalmaq heç vaxt bu qədər çətin və vacib olmamışdır. Biz effektiv strategiya, qiymətləndirmə,
+                            texnologiya və innovativ xidmətlər təqdim etməkdən qürur duyuruq..
                         </p>
-
-
                     </div>
                     <div class="col-12 col-lg-3">
                         <div class="related-articles ">
@@ -610,7 +609,6 @@
 
         </section>
     </main>
-
     <footer class="primary-bg">
         <div class="container">
             <div class="row">
@@ -678,9 +676,9 @@
                             </div>
                         </div>
                         <div class="accardion-text d-flex flex-column">
-                            <a href="#">Privacy</a>
-                            <a href="#">Cookie policy</a>
-                            <a href="#">Disclaimer</a>
+                            <a href="privacy.html">Privacy</a>
+                            <a href="policy.html">Cookie policy</a>
+                            <a href="disclaimer.html">Disclaimer</a>
                         </div>
                     </div>
                 </div>
