--- a/services-tax.html
+++ b/services-tax.html
@@ -48,7 +48,7 @@
               <a href="./services-accountment.html" class="primary hover-cc sub-act"
                 data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-              <a href="./services-advisory.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Xarici
+              <a href="./foreign-custom.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Xarici
                 ticarət və gömrük xidmətləri</a>
             </div>
           </div>
@@ -60,14 +60,14 @@
         <div class="menu industries d-flex" data-toggle="industries-menu">
           <div class="col-12 lightgray-bg menu-nav-left">
             <div class="wrapper d-flex flex-column align-items-center px-5">
-              <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-              <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-              <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-              <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-              <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-              <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-              <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-              <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+              <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+              <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+              <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+              <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+              <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+              <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+              <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+              <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
               <input type="text" class="search-input">
             </form>
             <a href="#" class="hover-cc primary toggleInput">
-              Find your local member firm
+              Sizin Maliyyə Sabitliyiniz
             </a>
             <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
             <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
@@ -150,7 +150,7 @@
                       <a href="./services-accountment.html" class="primary hover-cc sub-act"
                         data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-                      <a href="./services-advisory.html" class="primary hover-cc sub-act"
+                      <a href="./foreign-custom.html" class="primary hover-cc sub-act"
                         data-toggle="advisory-menu">Xarici ticarət və gömrük xidmətləri</a>
                     </div>
                   </div>
@@ -284,16 +284,15 @@
                 </a>
                 <div class="menu industries d-flex" data-toggle="services-menu">
                   <div class="col-3 lightgray-bg menu-nav-left">
-                    <div class="wrapper d-flex flex-column align-items-end px-5">
-                      <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-                      <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-                      <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-                      <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-                      <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                      <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                      <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
-                        hospitallar</a>
+                    <div class="wrapper d-flex flex-column align-items-center px-5">
+                      <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+                      <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+                      <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                      <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+                      <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                      <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                      <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                      <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
                     </div>
                   </div>
 
@@ -498,7 +497,7 @@
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
               </div>
               <div class="nav-drop-menu my-2">
-                <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici ticarət və
+                <a href="./foreign-custom.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici ticarət və
                   gömrük xidmətləri</a>
               </div>
 
@@ -522,7 +521,7 @@
 
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                  <a href="./services-tax-4.html" class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
+                  <a href="./services-advisory.html" class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
                 </p>
               </div>
 
@@ -532,7 +531,7 @@
             <div class="service-card-container d-flex flex-wrap">
               <div class="main-card">
                 <p class="fs-2 fw-500 ls-2 primary">Vergi</p>
-                <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p>
+                <!-- <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p> -->
               </div>
               <!-- <div class="side-card ">
                 <div class="card-info">
@@ -552,48 +551,25 @@
                 </div>
               </div> -->
               <p class="fw-600 fs-3 main-title mt-5">
-                Going beyond is what makes FA Consulting different. And what
-                clients value most.
+                Vergitutma işlərinizi FA Audit Consulting etibar edin
               </p>
-              <p class="fw-600 fs-3 main-title my-5">
-                We make business personal.
+
+              <p class="text fs-2 my-5">
+                Biznesiniz vergi planlaşdırması və vergi öhdəliklərinin azaldılması üçün strategiyaların həyata
+                keçirilməsində kömək tələb olduğunda, FA Audit Consultig 10 illik təcrübəyə malik peşakar komandası ilə
+                sizə peşakar xidmət göstərməyə hazırdı.
               </p>
               <p class="text fs-2 my-5">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
-                a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
-                quibusdam sint dolor voluptatem excepturi corporis. Expedita
-                delectus non qui vitae velit omnis corrupti ducimus, quas
-                consequatur sequi blanditiis autem deserunt harum architecto
-                iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
-                praesentium ipsam ratione harum!
+                Bizim komandamız istənilən tapşırıq üçün dərin sənaye bilikləri ilə birlikdə tələb olunan vergi və
+                hüquqi bacarıqlara malik komandanı tez bir zamanda toplamağa imkan verir. Nəticə etibarı ilə biz
+                müştərilərimizin dilində danışırıq və onların tələblərinə cavab veririk.
               </p>
-              <ul class="ms-4 my-3">
-                <p class="fw-600 ls-2 fs-2-5 my-3"> Transform Value</p>
-                <li class="fs-1-9 fw-500 my-3">
-                  Define strategic goals and formulate solutions that keep you ahead of disruptive change
-                </li>
-                <li class="fs-1-9 fw-500 my-3">
-                  Help you sustain and finance growth, manage risk and talent, optimise operations and protect value
-                </li>
-                <li class="fs-1-9 fw-500 my-3">
-                  Improve financial processes and systems, reduce costs and transform your finance function
-                </li>
-                <li class="fs-1-9 fw-500 my-3">
-                  Remove the burden of back office operations and compliance challenges, enabling you to focus on growth
-                </li>
-                <li class="fs-1-9 fw-500 my-3">
-                  Deliver systematic improvements across people, processes and technology, right through the supply
-                  chain
-                </li>
-                <li class="fs-1-9 fw-500 my-3">
-                  Engage, specify and deliver scalable technology solutions
-                </li>
-              </ul>
-              <p class="fs-1-9 fw-600 ls-2 my-3">Talk to us</p>
-              <p class="fs-2 fw-500 my-4 ls-2">
-                If you have any questions or would like to find out more about how we can help, please contact your
-                local member firm, or our global head of tax, <b>Lorem Dolar</b>.
+              <p class="text fs-2 my-5">
+                FA Audit Consulting ekspertləri müştəriləri bütün sahələrdə vergi qanunvericiliyinin inkişafı ilə bağlı
+                ən müasir və dəqiq məlumatlarla təmin edir və bununla da müştərilərə riskləri idarə etməkdə fəal olmaq
+                imkanı verir.
               </p>
+
               <!-- <div class="profile-card my-5">
                 <div class="profile-photo">
                   <img src="./assets/img/sub-sections/profile-photo.png" alt="">
