--- a/about-us.html
+++ b/about-us.html
@@ -48,7 +48,7 @@
               <a href="./services-accountment.html" class="primary hover-cc sub-act"
                 data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-              <a href="./services-advisory.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Xarici
+              <a href="./foreign-custom.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Xarici
                 ticarət və gömrük xidmətləri</a>
             </div>
           </div>
@@ -60,14 +60,14 @@
         <div class="menu industries d-flex" data-toggle="industries-menu">
           <div class="col-12 lightgray-bg menu-nav-left">
             <div class="wrapper d-flex flex-column align-items-center px-5">
-              <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-              <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-              <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-              <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-              <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-              <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-              <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-              <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+              <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+              <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+              <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+              <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+              <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+              <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+              <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+              <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
             </div>
           </div>
         </div>
@@ -110,13 +110,12 @@
         <div class="col-6 desk-nav justify-content-end">
           <div class="icon-box d-flex justify-content-end align-items-center">
             <form action="#" class="toggleInput" style="display: none;">
-              <input type="text" class="search-input" placeholder="Search">
+              <input type="text" class="search-input">
             </form>
             <a href="#" class="hover-cc primary toggleInput">
-              Find your local member firm
+              Sizin Maliyyə Sabitliyiniz
             </a>
-            <a href="#" style="border-left: 1px solid lightgray !important;"><i
-                class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
+            <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
             <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
             </a>
             <a href="#" class="showSearch"><i class="fas fa-search primary hover-cc"></i></a>
@@ -151,7 +150,7 @@
                       <a href="./services-accountment.html" class="primary hover-cc sub-act"
                         data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-                      <a href="./services-advisory.html" class="primary hover-cc sub-act"
+                      <a href="./foreign-custom.html" class="primary hover-cc sub-act"
                         data-toggle="advisory-menu">Xarici ticarət və gömrük xidmətləri</a>
                     </div>
                   </div>
@@ -285,16 +284,15 @@
                 </a>
                 <div class="menu industries d-flex" data-toggle="services-menu">
                   <div class="col-3 lightgray-bg menu-nav-left">
-                    <div class="wrapper d-flex flex-column align-items-end px-5">
-                      <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-                      <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-                      <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-                      <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-                      <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                      <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                      <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
-                        hospitallar</a>
+                    <div class="wrapper d-flex flex-column align-items-center px-5">
+                      <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+                      <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+                      <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                      <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+                      <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                      <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                      <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                      <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
                     </div>
                   </div>
 
@@ -441,7 +439,7 @@
           </div>
           <div class="breadcrumb--title fs-2 white fw-400">FA Consulting</div>
           <div class="breadcrumb--text white mt-5">
-            Going beyond business as usual, so you can too
+            Sürətli, Dəqiq Hesabatlarınızı əldə edin.
           </div>
           <div class="breadcrumb--nav d-flex flex-column flex-lg-row">
             <a href="./why-fac.html" class="white hover-cc fw-300 my-4 my-lg-0">Why FA Consulting</a>
@@ -456,30 +454,53 @@
         <div class="row my-5">
           <div class="col-12">
             <p class="fw-600 fs-3 main-title">
-              We are FA Consulting. <br />
-              Going beyond business as usual, so you can too.
+              FA Audit Consulting
             </p>
             <p class="text fs-2 my-5">
-              We invest in listening, building relationships and understanding
-              your concerns to deliver an experience that’s more personal,
-              agile and proactive. We work at the pace that matters. Yours.
-              That's why we celebrate fresh thinking and diverse perspectives
-              to find better solutions. We don’t predict the future. We help
-              you shape it.
+              FA Audit Consulting 10 ildən uzun müddətdi Azərbaycanın aparıcı audit, vergi və konsaltinq şirkətidir.
+              Şirkətlərə tərəfdaşlıq göstərərək, audit və mühasibat uçotu, eləcə də vergi, maliyyə məsləhəti, konsaltinq
+              üzrə müstəsna və şikətlərin strukturuna uyğunlaşdırılmış xidmətlər təqdim edir. FA Audit Consulting
+              komandası müştərilərin mühasibat uçotu, vergitutma və hesabatların Beynəlxalq Maliyyə Hesabatları
+              Standartlarına uyğun tənzimlənməsi üçün aktual mövzular üzrə mütəmadi olaraq təlimlər və seminarlar
+              keçirir.
             </p>
             <p class="fw-600 fs-3 main-title mt-5">
-              We embrace what makes each market unique. <br />
-              On a global scale.
+              Niyə biz?
             </p>
-            <p class="text fs-2 my-5">
-              We are a global network of 58,000 people in member firms in over
-              130 countries with a common goal — to help you realise your
-              ambitions. Which is why our network combines global scale and
-              capability with local insights and understanding. So, whether
-              you’re growing in one market or many, looking to operate more
-              effectively, managing risk and regulation, or realising
-              stakeholder value, our member firms have the assurance, tax and
-              advisory capabilities you need with the quality you expect.
+            <p class="text fs-2 my-2 fw-600">
+              Bütün dünyada maliyyə tənzimləyici orqanları beynəlxalq ticarəti idarə etmək üçün hazırlanmış kompleks
+              mühasibat uçotu normlarını hər il artan formanda təqdim etdilər.
+            </p>
+            <p class="text fs-2 my-2">
+              Hesabatlarımızda təqdim etdiyimiz nəticələr və tövsiyələrimiz müştərilərimizin muhasibat, audit, vergi
+              həllərinin asanlaşdırmaq üçündür.
+            </p>
+            <p class="text fs-2 my-2">
+              Bizim rolumuz təkcə uyğunluğu asanlaşdırmaq deyil, həm də fəaliyyət göstərdiyiniz hər bir sahə üçün düzgün
+              strateji və vergi məsləhətləri almanızı təmin etməkdir.
+            </p>
+            <p class="fw-600 fs-3 main-title mt-5">
+              Müştərilərimiz
+            </p>
+            <p class="text fs-2 my-2 fw-600">
+              FA Audit Consulting audit ehtiyaclarınıza diqqət yetirir.
+            </p>
+            <p class="text fs-2 my-2">
+              Müştərilərimizin hər biri, şirkətin böyüklüyündən asılı olmayaraq, bizim üçün birmənalı şəkildə vacibdir
+              və ildən-ilə məmnun müştəri sayımızın artmas bizneslərinə qatdıgımız əhəmiyyətli dəyəri əks etdirir.
+            </p>
+
+            <p class="fw-600 fs-3 main-title mt-5">
+              Komandamız
+            </p>
+            <p class="text fs-2 my-2 fw-600">
+              FA Audit Consulting insanlara inkişaf etmək imkanı verilən gənc və dinamik bir mühitdir.
+            </p>
+            <p class="text fs-2 my-2">
+              Tərəfdaşlarımız həm akademik, həm də kommersiya iş mühitində geniş ixtisaslara, biliklərə, bacarıqlara və
+              təcrübəyə malikdirlər. Onların işlərinə olan şəxsi diqqəti, uzun illər ərzində qazandıqları geniş təcrübə
+              və müştərilərimizlə qurdugları peşakar münasibətlər şirkətimizə yüksək dəyər qatır. Bundan əlavə, bizim
+              müştəri tələblərini tam başa düşmək və həll etmək üçün müstəsna dərəcədə güclü önəm yetiririk.
             </p>
           </div>
         </div>
@@ -492,16 +513,17 @@
             <div class="personel-card" style="
                   background-image: url('./assets/img/about-us/ceo-personel.webp');
                 ">
-              <div class="personel-card-title white">Leadership</div>
+              <div class="personel-card-title white">RƏHBƏRLİK
+              </div>
               <div class="personel-card-info white mt-5">
                 UlVİ ALİYEV
               </div>
               <div class="personel-card-sub white my-3">
-                Hear from our CEO
+                CEO
               </div>
               <a href="seo-about-us.html">
                 <button class="btndefault btn-w border-w">
-                  Read more about Ulvi Aliyev
+                  Haqqında Oxu
                 </button>
               </a>
             </div>
@@ -510,12 +532,12 @@
             <div class="personel-card" style="
                   background-image: url('./assets/img/about-us/personel-3.jpg');
                 ">
-              <div class="personel-card-title white">OUR SCALE</div>
+              <div class="personel-card-title white">PARTNYORLAR</div>
               <div class="personel-card-info white mt-5">
-                CUSTOMERS
+                Müştərilərimiz
               </div>
               <div class="personel-card-sub white my-3">
-                FA Consulting valuable customers
+                Dəyərli Müştərilərimizin siyahısı ilə tanış olun.
               </div>
               <a href="customers.html">
                 <button class="btndefault btn-w border-w">
@@ -528,12 +550,12 @@
             <div class="personel-card" style="
                   background-image: url('./assets/img/about-us/personel-2.webp');
                 ">
-              <div class="personel-card-title white">PEOPLE</div>
+              <div class="personel-card-title white">Komandamız</div>
               <div class="personel-card-info white mt-5">
-                KOMANDAMIZ
+                Komandamızla Tanış Olun
               </div>
               <div class="personel-card-sub white my-3">
-                FA Consulting profesional heyətilə
+                FA Audit Consulting insanlara inkişaf etmək imkanı verilən gənc və dinamik bir mühitdir.
               </div>
               <a href="team.html">
                 <button class="btndefault btn-w border-w">
