--- a/audit.html
+++ b/audit.html
@@ -49,7 +49,7 @@
                             <a href="./services-accountment.html" class="primary hover-cc sub-act"
                                 data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-                            <a href="./services-advisory.html" class="primary hover-cc sub-act"
+                            <a href="./foreign-custom.html" class="primary hover-cc sub-act"
                                 data-toggle="advisory-menu">Xarici
                                 ticarət və gömrük xidmətləri</a>
                         </div>
@@ -62,14 +62,14 @@
                 <div class="menu industries d-flex" data-toggle="industries-menu">
                     <div class="col-12 lightgray-bg menu-nav-left">
                         <div class="wrapper d-flex flex-column align-items-center px-5">
-                            <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-                            <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-                            <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-                            <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-                            <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                            <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                            <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+                            <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+                            <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+                            <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                            <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+                            <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                            <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                            <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                            <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                             <input type="text" class="search-input">
                         </form>
                         <a href="#" class="hover-cc primary toggleInput">
-                            Find your local member firm
+                            Sizin Maliyyə Sabitliyiniz
                         </a>
                         <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
                         <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
@@ -154,7 +154,7 @@
                                             <a href="./services-accountment.html" class="primary hover-cc sub-act"
                                                 data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-                                            <a href="./services-advisory.html" class="primary hover-cc sub-act"
+                                            <a href="./foreign-custom.html" class="primary hover-cc sub-act"
                                                 data-toggle="advisory-menu">Xarici ticarət və gömrük xidmətləri</a>
                                         </div>
                                     </div>
@@ -292,15 +292,17 @@
                                 </a>
                                 <div class="menu industries d-flex" data-toggle="services-menu">
                                     <div class="col-3 lightgray-bg menu-nav-left">
-                                        <div class="wrapper d-flex flex-column align-items-end px-5">
-                                            <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-                                            <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-                                            <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-                                            <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-                                            <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                                            <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                                            <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
+                                        <div class="wrapper d-flex flex-column align-items-center px-5">
+                                            <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+                                            <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+                                            <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                                            <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+                                            <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı,
+                                                emal</a>
+                                            <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                                            <a href="ticaret.html" class="primary hover-cc">Ticarət və
+                                                Pərakəndəçilik</a>
+                                            <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və
                                                 hospitallar</a>
                                         </div>
                                     </div>
@@ -508,12 +510,12 @@
                             </div>
                             <div class="nav-wrapper d-flex justify-content-between align-items-center">
                                 <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                                    Məsləhət
+                                    Gömrük Xidmətləri
                                 </p>
                                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
                             </div>
                             <div class="nav-drop-menu my-2">
-                                <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici
+                                <a href="./foreign-custom.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici
                                     ticarət və
                                     gömrük xidmətləri</a>
                             </div>
@@ -526,7 +528,7 @@
                                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
                             </div>
                             <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="audit-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
+                                <a href="./audit-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
                                     hesabatlarının
                                     auditi</a>
                                 <a href="./audit-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Maliyyə
@@ -541,8 +543,8 @@
 
                             <div class="nav-wrapper d-flex justify-content-between align-items-center">
                                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    <a href="./services-tax-4.html" class="primary hover-cc fs-1-7  my-3">Gömrük
-                                        Xidmətləri</a>
+                                    <a href="./services-advisory.html"
+                                        class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
                                 </p>
                             </div>
 
@@ -552,7 +554,7 @@
                         <div class="service-card-container d-flex flex-wrap">
                             <div class="main-card">
                                 <p class="fs-2 fw-500 ls-2 primary">Audit</p>
-                                <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p>
+                                <!-- <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p> -->
                             </div>
                             <!-- <div class="side-card ">
                 <div class="card-info">
@@ -572,22 +574,30 @@
                 </div>
               </div> -->
                             <p class="fw-600 fs-3 main-title mt-5">
-                                Going beyond is what makes FA Consulting different. And what
-                                clients value most.
+                                Audit xidmətləri
                             </p>
                             <p class="fw-600 fs-3 main-title my-5">
-                                We make business personal.
+                                FA Audit Consulting audit xidməti və növləri
                             </p>
                             <p class="text fs-2 my-5">
-                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
-                                a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
-                                quibusdam sint dolor voluptatem excepturi corporis. Expedita
-                                delectus non qui vitae velit omnis corrupti ducimus, quas
-                                consequatur sequi blanditiis autem deserunt harum architecto
-                                iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
-                                praesentium ipsam ratione harum!
+                                Audit xidmətləri FA Audit Consulting tərəfindən müştərilərinə göstərdiyi xidmətlərin
+                                əsasını təşkil edir və multidissiplinar şirkətlərə yüksək keyfiyyətli audit servisləri
+                                təqdim edərək, dəyər və şəffaflıq təmin etmək üçün yeniliklər edir və bununla da unikal
+                                müştəri xidməti görstərir.
                             </p>
-                            <ul class="ms-4 my-3">
+                            <p class="text fs-2 my-5">
+                                FA Audit Consulting hərtərəfli, yüksək keyfiyyətli və perspektivli audit xidmətlərini
+                                sizlərə təklif edir. Bununla biz müştərilərimizin biznesinə hər zaman dəyər qatmağa
+                                çalışırıq. Şirkətinizin iqtisadi vəziyyəti haqqında aydın analiz əldə etməklə yanaşı,
+                                biz gələcəkdə qarşılaşa biləcək riskləri də müəyyən edirik. Peşəkar xidmətlərimiz ən
+                                yüksək milli və beynəlxalq standartlara cavab verir.
+                            </p>
+                            <p class="text fs-2 my-5">
+                                FA Audit Consulting tərəfindən müştərilərinə təklif olunan audit xidmətləri: Vergi
+                                hesabatlarının auditi, Maliyyə hesabatlarının auditi, Əmlakın qiymətləndirilməsinin
+                                auditi, Nizamnamə kapitalının formalaşdırılmasının auditi
+                            </p>
+                            <!-- <ul class="ms-4 my-3">
                                 <p class="fw-600 ls-2 fs-2-5 my-3"> Transform Value</p>
                                 <li class="fs-1-9 fw-500 my-3">
                                     Define strategic goals and formulate solutions that keep you ahead of disruptive
@@ -619,7 +629,7 @@
                                 If you have any questions or would like to find out more about how we can help, please
                                 contact your
                                 local member firm, or our global head of tax, <b>Lorem Dolar</b>.
-                            </p>
+                            </p> -->
                             <!-- <div class="profile-card my-5">
                                 <div class="profile-photo">
                                     <img src="./assets/img/sub-sections/profile-photo.png" alt="">
