--- a/fields.html
+++ b/fields.html
@@ -49,7 +49,7 @@
                             <a href="./services-accountment.html" class="primary hover-cc sub-act"
                                 data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-                            <a href="./services-advisory.html" class="primary hover-cc sub-act"
+                            <a href="./foreign-custom.html" class="primary hover-cc sub-act"
                                 data-toggle="advisory-menu">Xarici
                                 ticarət və gömrük xidmətləri</a>
                         </div>
@@ -62,14 +62,14 @@
                 <div class="menu industries d-flex" data-toggle="industries-menu">
                     <div class="col-12 lightgray-bg menu-nav-left">
                         <div class="wrapper d-flex flex-column align-items-center px-5">
-                            <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-                            <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-                            <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-                            <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-                            <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                            <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                            <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+                            <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+                            <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+                            <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                            <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+                            <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                            <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                            <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                            <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
                         </div>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                             <input type="text" class="search-input">
                         </form>
                         <a href="#" class="hover-cc primary toggleInput">
-                            Find your local member firm
+                            Sizin Maliyyə Sabitliyiniz
                         </a>
                         <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
                         <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
@@ -154,7 +154,7 @@
                                             <a href="./services-accountment.html" class="primary hover-cc sub-act"
                                                 data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-                                            <a href="./services-advisory.html" class="primary hover-cc sub-act"
+                                            <a href="./foreign-custom.html" class="primary hover-cc sub-act"
                                                 data-toggle="advisory-menu">Xarici ticarət və gömrük xidmətləri</a>
                                         </div>
                                     </div>
@@ -292,15 +292,17 @@
                                 </a>
                                 <div class="menu industries d-flex" data-toggle="services-menu">
                                     <div class="col-3 lightgray-bg menu-nav-left">
-                                        <div class="wrapper d-flex flex-column align-items-end px-5">
-                                            <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-                                            <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-                                            <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-                                            <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-                                            <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                                            <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                                            <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                                            <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
+                                        <div class="wrapper d-flex flex-column align-items-center px-5">
+                                            <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+                                            <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+                                            <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                                            <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+                                            <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı,
+                                                emal</a>
+                                            <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                                            <a href="ticaret.html" class="primary hover-cc">Ticarət və
+                                                Pərakəndəçilik</a>
+                                            <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və
                                                 hospitallar</a>
                                         </div>
                                     </div>
