--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a href="./services-accountment.html" class="primary hover-cc sub-act"
                 data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-              <a href="./services-advisory.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Xarici
+              <a href="./foreign-custom.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Xarici
                 ticarət və gömrük xidmətləri</a>
             </div>
           </div>
@@ -60,14 +60,14 @@
         <div class="menu industries d-flex" data-toggle="industries-menu">
           <div class="col-12 lightgray-bg menu-nav-left">
             <div class="wrapper d-flex flex-column align-items-center px-5">
-              <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-              <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-              <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-              <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-              <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-              <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-              <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-              <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+              <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+              <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+              <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+              <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+              <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+              <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+              <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+              <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
             </div>
           </div>
         </div>
@@ -150,7 +150,7 @@
                       <a href="./services-accountment.html" class="primary hover-cc sub-act"
                         data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-                      <a href="./services-advisory.html" class="primary hover-cc sub-act"
+                      <a href="./foreign-custom.html" class="primary hover-cc sub-act"
                         data-toggle="advisory-menu">Xarici ticarət və gömrük xidmətləri</a>
                     </div>
                   </div>
@@ -284,16 +284,15 @@
                 </a>
                 <div class="menu industries d-flex" data-toggle="services-menu">
                   <div class="col-3 lightgray-bg menu-nav-left">
-                    <div class="wrapper d-flex flex-column align-items-end px-5">
-                      <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-                      <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-                      <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-                      <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-                      <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                      <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                      <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
-                        hospitallar</a>
+                    <div class="wrapper d-flex flex-column align-items-center px-5">
+                      <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+                      <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+                      <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                      <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+                      <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                      <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                      <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                      <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
                     </div>
                   </div>
 
@@ -636,48 +635,48 @@
         <div class="row mx-0 px-0">
           <div class="col-12 col-md-6 firm-image p-5 pos-rel">
             <div class="firm-overlay"></div>
-            <p class="firm-title">What is trending?</p>
+            <p class="firm-title">Yeni trendlər nələrdir?</p>
             <div class="text-wrapper">
-              <span>IFRS</span>
-              <a href="#">Insights into IFRS 16</a>
+              <a href="#">Vergi Məcəlləsində edilmiş dəyişikliklər...</a>
             </div>
           </div>
           <div class="col-12 col-md-6 px-0">
             <div class="link-wrapper primary-bg d-flex flex-column justify-content-around">
               <div class="link-item">
-                <div class="link-title">IFRS 16</div>
+                <div class="link-title">XƏBƏRLƏR</div>
                 <div class="link-text">
-                  <a href="#">Understanding the discount rate</a>
+                  <a href="#">2022-ci ildə bankları ən çox narahat edən risk açıqlandı</a>
                 </div>
               </div>
               <div class="link-item">
                 <div class="link-title">
-                  International financial reporting ...
+                  VERGİ
                 </div>
                 <div class="link-text">
-                  <a href="#">COVID 19: Debt modifications</a>
+                  <a href="#">Vergi Məcəlləsində edilmiş dəyişikliklər...</a>
                 </div>
               </div>
               <div class="link-item">
                 <div class="link-title">
-                  International financial reporting ...
+                  XƏBƏRLƏR
                 </div>
                 <div class="link-text">
-                  <a href="#">IAS 36 - Identifying cash-generating unit</a>
+                  <a href="#">Yerli istehsalın təşviqi ilə bağlı vergi tənzimləmələri həyata keçiriləcək</a>
                 </div>
               </div>
               <div class="link-item">
                 <div class="link-title">
-                  International financial reporting ...
+                  BEYNƏLXALQ MALİYYƏ HESABATLARI...
                 </div>
                 <div class="link-text">
-                  <a href="#">COVID 19: Government grants</a>
+                  <a href="#">COVID 19: Hökumət qrantları</a>
                 </div>
               </div>
               <div class="link-item">
-                <div class="link-title">IFRS 3</div>
+                <div class="link-title">VERGİ</div>
                 <div class="link-text">
-                  <a href="#">The acquisition method at a glance</a>
+                  <a href="#">Vergi Məcəlləsində və Nağdsız hesablaşmalar haqqında Qanun layihələri sabah birinci
+                    oxunuşdan keçəcək</a>
                 </div>
               </div>
             </div>
@@ -689,19 +688,18 @@
       <div class="container">
         <div class="row px-0 mx-0">
           <div class="col-12 mb-5">
-            <p class="fs-3 fw-600">News</p>
+            <p class="fs-3 fw-600">Xəbərlər</p>
           </div>
           <div class="col-12 col-lg-4">
             <div class="news-card">
               <div class="news-card--date">17 Dec 2021</div>
               <div class="news-card--title">
-                <a href="#" class="primary">Grant Thornton grows global revenues from USD5.8 billion to
-                  a record USD6.6 billion</a>
+                <a href="news.html" class="primary">2022-ci ildə bankları ən çox narahat edən risk açıqlandı...</a>
               </div>
               <div class="news-card--text mt-44">
-                Lorem is having fun in Ipsum town lets join them Lorem is
-                having fun in Ipsum town lets join them Lorem is having fun in
-                Ipsum town lets join them
+                “2022-ci ildə bizi narahat edən ən böyük amil dünyadakı bahalaşmadır. Artıq Azərbaycanda inflyasiya
+                göstəricisi əmanət faizlərindən yüksəkdir və belə bir vəziyyət əmanətlərin artmasını zəiflədə, hətta
+                azalmasına səbəb ola bilər”.
               </div>
             </div>
           </div>
@@ -709,13 +707,12 @@
             <div class="news-card">
               <div class="news-card--date">17 Dec 2021</div>
               <div class="news-card--title">
-                <a href="#" class="primary">Mid-market businesses eager to embrace sustainability but
-                  struggle to overcome barriers to progression...</a>
+                <a href="news.html" class="primary">Vergi Məcəlləsində edilmiş dəyişikliklər...</a>
               </div>
               <div class="news-card--text mt-44">
-                Lorem is having fun in Ipsum town lets join them Lorem is
-                having fun in Ipsum town lets join them Lorem is having fun in
-                Ipsum town lets join them
+                Vergi Məcəlləsində edilmiş dəyişikliklərdən biri bank hesabları barədə məlumatların vergi orqanına
+                təqdim edilməsi ilə bağlıdır. Bu barədə İqtisadiyyat Nazirliyi yanında Dövlət Vergi Xidmətinin
+                açıqlamasında bildirilir.
               </div>
             </div>
           </div>
@@ -723,18 +720,18 @@
             <div class="news-card">
               <div class="news-card--date">17 Dec 2021</div>
               <div class="news-card--title">
-                <a href="#" class="primary">Grant Thornton International Ltd builds its global industry
-                  programme with three new appointments...</a>
+                <a href="news.html" class="primary">Yerli istehsalın təşviqi ilə bağlı vergi tənzimləmələri həyata
+                  keçiriləcək</a>
               </div>
               <div class="news-card--text mt-44">
-                Lorem is having fun in Ipsum town lets join them Lorem is
-                having fun in Ipsum town lets join them Lorem is having fun in
-                Ipsum town lets join them
+                Yerli istehsalın təşviqi ilə bağlı vergi tənzimləmələri həyata keçiriləcək”
+                İqtisadiyyat Nazirliyi yanında Dövlət Vergi Xidmətinin rəis müavini Samirə Musayevanın müsahibəsini
+                təqdim edirik.
               </div>
             </div>
           </div>
           <div class="col-12 text-end py-5">
-            <a id="viewAll" href="#">View All <i class="fas fa-arrow-right"></i></a>
+            <a id="viewAll" href="news.html">Hamısını oxu <i class="fas fa-arrow-right"></i></a>
           </div>
         </div>
       </div>
@@ -764,7 +761,7 @@
               <p class="info">Potensialınızı bizimlə kəşf edin</p>
               <p class="text">Yeni məzunlar üçün inkişaf proqramları</p>
               <a class="btn-cont" href="./student-career-1.html">
-                <button class="btndefault btn-w">
+                <button class="btndefault btn-w" style="margin-left: 10px;">
                   Bizim komandamıza qoşulun
                 </button>
               </a>
@@ -778,7 +775,7 @@
                 Təcrübənizə uyğun iş imkanları
               </p>
               <a class="btn-cont" href="./student-career-2.html">
-                <button class="btndefault btn-r">
+                <button class="btndefault btn-r" style="margin-left: 10px;">
                   Bizim komandamıza qoşulun
                 </button>
               </a>
