--- a/news.html
+++ b/news.html
@@ -448,8 +448,7 @@
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Audit</p>
-                        <p class="fs-1-9 primary hover-cc custom-before ms-5">Vergi hesabatlarının auditi</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Xəbərlər</p>
                     </div>
                 </div>
             </div>
@@ -457,7 +456,7 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6   fw-600 service-title">Vergi auditi xidmətləri</div>
+                    <div class="col-6    service-title">Xəbərlər</div>
 
                 </div>
             </div>
@@ -466,145 +465,109 @@
         <section id="service-panel" class="py-5 mt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-lg-2">
-                        <div class="wrapper flex flex-column">
-                            <div class="fs-2-5 my-3">Xidmətlərimiz</div>
 
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    Vergi
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+                    <div class="col-12 col-lg-12">
+                        <div class="service-card-container d-flex flex-wrap">
+                            <div class="main-card">
+                                <p class="fs-2 fw-500 ls-2 primary">Xəbərlər</p>
+                                <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p>
                             </div>
-                            <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi auditi
-                                    xidmətləri</a>
-                                <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    məsləhət
-                                    xidmətləri</a>
-                                <a href="./services-tax-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    planlaması
-                                    xidmətləri</a>
-                                <a href="./services-tax-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    sahəsində sair
-                                    xidmətlər</a>
-                            </div>
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center mt-3">
-                                <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                                    Muhasibatlıq
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-                            </div>
-                            <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="./services-accountment-1.html"
-                                    class="primary hover-cc fs-1-7 fw-600 my-3">Muhasibat uçotunun
-                                    aparılması üzrə autsors
-                                    xidməti</a>
-                                <a href="./services-accountment-2.html"
-                                    class="primary hover-cc  fs-1-7 fw-600 my-3">Maliyyə uçotunun
-                                    aparılması üzrə autsors
-                                    xidmətləri</a>
-                                <a href="./services-accountment-3.html"
-                                    class="primary hover-cc fs-1-7 fw-600 my-3">Şirkət rəhbərliyinə
-                                    xərclər və gəlirlilik haqqında
-                                    hesabatların hazırlanması</a>
-                            </div>
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                                    Gömrük Xidmətləri
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-                            </div>
-                            <div class="nav-drop-menu my-2">
-                                <a href="./foreign-custom.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici
-                                    ticarət və
-                                    gömrük xidmətləri</a>
-                            </div>
+                            <!-- <div class="side-card ">
+                <div class="card-info">
+                  <p class="darkgray fs-2 ls-2">
+                    INSIGHTS
+                  </p>
+                  <p class="fs-2-5 fw-600 ls-2">
+                    Business resilience
+                  </p>
+                  <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                    <p class="fs-2 hover-cc secondary">Retune your business</p>
+                    <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
+                  </a>
+                </div>
+                <div class="card-image">
+                  <img src="./assets/img/client-behaviour-300x300.jpg" alt="">
+                </div>
+              </div> -->
+                            <p class="fw-600 fs-3 main-title mt-5">
+                                Going beyond is what makes FA Consulting different. And what
+                                clients value most.
+                            </p>
+                            <p class="fw-600 fs-3 main-title my-5">
+                                We make business personal.
+                            </p>
+                            <p class="text fs-2 my-5">
+                                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque,
+                                a maxime ipsa cupiditate voluptatum mollitia labore dignissimos
+                                quibusdam sint dolor voluptatem excepturi corporis. Expedita
+                                delectus non qui vitae velit omnis corrupti ducimus, quas
+                                consequatur sequi blanditiis autem deserunt harum architecto
+                                iusto ad odit recusandae rerum sed natus illum! Quidem vitae rem
+                                praesentium ipsam ratione harum!
+                            </p>
+                            <ul class="ms-4 my-3">
+                                <p class="fw-600 ls-2 fs-2-5 my-3"> Transform Value</p>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Define strategic goals and formulate solutions that keep you ahead of disruptive
+                                    change
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Help you sustain and finance growth, manage risk and talent, optimise operations and
+                                    protect value
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Improve financial processes and systems, reduce costs and transform your finance
+                                    function
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Remove the burden of back office operations and compliance challenges, enabling you
+                                    to focus on growth
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Deliver systematic improvements across people, processes and technology, right
+                                    through the supply
+                                    chain
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Engage, specify and deliver scalable technology solutions
+                                </li>
+                            </ul>
+                            <p class="fs-1-9 fw-600 ls-2 my-3">Talk to us</p>
+                            <p class="fs-2 fw-500 my-4 ls-2">
+                                If you have any questions or would like to find out more about how we can help, please
+                                contact your
+                                local member firm, or our global head of tax, <b>Lorem Dolar</b>.
+                            </p>
+                            <!-- <div class="profile-card my-5">
+                                <div class="profile-photo">
+                                    <img src="./assets/img/sub-sections/profile-photo.png" alt="">
 
-
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    Audit Xidmətləri
+                                </div>
+                                <p class="fs-2-5 fw-600 ls-2">
+                                    Lorem Dolar
                                 </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
+                                <p class="fs-2 fw-500 my-3">Head of Tax</p>
                             </div>
-                            <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="./audit-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    hesabatlarının
+                            <p class="fs-2-5 fw-600 ls-2 col-12">
+                                Key Services
+                            </p>
+                            <div class="key-services my-5 d-flex flex-wrap">
+
+                                <a href="./audit-1.html" class="key-services-item fs-2 primary m-2 ">Vergi
+                                    hesabatlarının auditi</a>
+                                <a href="./audit-2.html" class="key-services-item fs-2 primary m-2">Maliyyə
+                                    hesabatlarının auditi</a>
+                                <a href="./audit-3.html" class="key-services-item fs-2 primary m-2">Əmlakın
+                                    qiymətləndirilməsinin
                                     auditi</a>
-                                <a href="./audit-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Maliyyə
-                                    hesabatlarının
-                                    auditi</a>
-                                <a href="./audit-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Əmlakın
-                                    qiymətləndirilməsinin auditi</a>
-                                <a href="./audit-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Nizamnamə
+                                <a href="./audit-4.html" class="key-services-item fs-2 primary m-2">Nizamnamə
                                     kapitalının
                                     formalaşdırılmasın auditi</a>
-                            </div>
-
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    <a href="./services-advisory.html"
-                                        class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
-                                </p>
-                            </div>
-
+                            </div> -->
                         </div>
-                    </div>
-                    <div class="col-12 col-lg-7 text-area pl-80">
-                        <p class="fs-2-5 fw-600 my-3">
-                            Vergi hesablarınızı FA Audit Consulting həll etsin
-                        </p>
-                        <p class="fs-1-7  ls-2 lh-30">
-                            Vergi auditi FA Audit Consulting firması tərəfindən şirkətin bütün qüvvədə olan qaydalara
-                            uyğun olaraq korporativ gəlir vergisini düzgün hesablayıb təqdim edib-etmədiyini yoxlamaq
-                            üçün həyata keçirilən xüsusi yoxlamadır. Yoxlamanın sonunda vergi orqanına vergi uyğunluğu
-                            yoxlaması haqqında lazım olan akt verilir.
-                        </p>
-
-                        <p class="fs-1-7  ls-2 lh-30 my-5">
-                            Vergiyə uyğunluq yoxlaması üçün həyata keçirilən audit prosedurları maliyyə hesabatı
-                            yoxlamalarından onunla fərqlənir ki, işlərin əksəriyyəti xərc çeklərinin nəzərdən
-                            keçirilməsinə və Şirkətin gəlir vergisi qanun və qaydalarına uyğunluğunun yoxlanmasına
-                            yönəlib.
-                        </p>
-
 
                     </div>
-                    <div class="col-12 col-lg-3">
-                        <div class="related-articles ">
-                            <div class="fs-2-5 fw-600 ls-2">
-                                Bənzər Xəbərlər
-                            </div>
-                            <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər 1</div>
-                                <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                                <a href="news.html"
-                                    class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
-                                    <p class="fs-2 hover-cc secondary">Davamını oxu</p>
-                                    <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
-                                </a>
-                            </div>
-                            <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər 2</div>
-                                <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                                <a href="news.html"
-                                    class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
-                                    <p class="fs-2 hover-cc secondary">Davamını oxu</p>
-                                    <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
-                                </a>
-                            </div>
-                            <div class="article-card d-flex flex-column my-4">
-                                <div class="darkgray fs-1-9 ls-2 my-2"> Xəbərlər 3</div>
-                                <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                                <a href="news.html"
-                                    class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
-                                    <p class="fs-2 hover-cc secondary">Davamını oxu</p>
-                                    <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
             </div>
 
