--- a/services-tax-3.html
+++ b/services-tax-3.html
@@ -48,7 +48,7 @@
               <a href="./services-accountment.html" class="primary hover-cc sub-act"
                 data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-              <a href="./services-advisory.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Xarici
+              <a href="./foreign-custom.html" class="primary hover-cc sub-act" data-toggle="advisory-menu">Xarici
                 ticarət və gömrük xidmətləri</a>
             </div>
           </div>
@@ -60,14 +60,14 @@
         <div class="menu industries d-flex" data-toggle="industries-menu">
           <div class="col-12 lightgray-bg menu-nav-left">
             <div class="wrapper d-flex flex-column align-items-center px-5">
-              <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-              <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-              <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-              <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-              <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-              <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-              <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-              <a href="fields.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
+              <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+              <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+              <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+              <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+              <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+              <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+              <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+              <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
             </div>
           </div>
         </div>
@@ -113,7 +113,7 @@
               <input type="text" class="search-input">
             </form>
             <a href="#" class="hover-cc primary toggleInput">
-              Find your local member firm
+              Sizin Maliyyə Sabitliyiniz
             </a>
             <a href="#"><i class="fas fa-bookmark primary hover-cc toggleInput"></i></a>
             <a href="#"><i class="fas fa-globe-europe primary hover-cc toggleInput"></i>
@@ -150,7 +150,7 @@
                       <a href="./services-accountment.html" class="primary hover-cc sub-act"
                         data-toggle="assurance-menu">Muhasibatlıq Xidmətləri</a>
 
-                      <a href="./services-advisory.html" class="primary hover-cc sub-act"
+                      <a href="./foreign-custom.html" class="primary hover-cc sub-act"
                         data-toggle="advisory-menu">Xarici ticarət və gömrük xidmətləri</a>
                     </div>
                   </div>
@@ -284,16 +284,15 @@
                 </a>
                 <div class="menu industries d-flex" data-toggle="services-menu">
                   <div class="col-3 lightgray-bg menu-nav-left">
-                    <div class="wrapper d-flex flex-column align-items-end px-5">
-                      <a href="fields.html" class="primary hover-cc mt-3">Təhsil</a>
-                      <a href="fields.html" class="primary hover-cc">Hotel və Turizm</a>
-                      <a href="fields.html" class="primary hover-cc">İstehsalat sahəsi</a>
-                      <a href="fields.html" class="primary hover-cc">Maliyyə qurumları</a>
-                      <a href="fields.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
-                      <a href="fields.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
-                      <a href="fields.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
-                      <a href="fields.html" class="primary hover-cc">Xəstəxanalar və
-                        hospitallar</a>
+                    <div class="wrapper d-flex flex-column align-items-center px-5">
+                      <a href="tehsil.html" class="primary hover-cc mt-3">Təhsil</a>
+                      <a href="otel-turizm.html" class="primary hover-cc">Hotel və Turizm</a>
+                      <a href="istehsalat.html" class="primary hover-cc">İstehsalat sahəsi</a>
+                      <a href="maliye.html" class="primary hover-cc">Maliyyə qurumları</a>
+                      <a href="kend-teserufat.html" class="primary hover-cc">Kənd Təsərüfatı, emal</a>
+                      <a href="tikinti.html" class="primary hover-cc">Tikinti və əmlak sahəsi</a>
+                      <a href="ticaret.html" class="primary hover-cc">Ticarət və Pərakəndəçilik</a>
+                      <a href="xestexana.html" class="primary hover-cc">Xəstəxanalar və hospitallar</a>
                     </div>
                   </div>
 
@@ -499,7 +498,7 @@
                 <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
               </div>
               <div class="nav-drop-menu my-2">
-                <a href="./services-advisory-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici ticarət və
+                <a href="./foreign-custom.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici ticarət və
                   gömrük xidmətləri</a>
               </div>
 
@@ -523,7 +522,7 @@
 
               <div class="nav-wrapper d-flex justify-content-between align-items-center">
                 <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                  <a href="./services-tax-4.html" class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
+                  <a href="./services-advisory.html" class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
                 </p>
               </div>
 
@@ -531,72 +530,47 @@
           </div>
           <div class="col-12 col-lg-7 text-area pl-80">
             <p class="fs-2-5 fw-600 my-3">
-              Staying ahead of disruptive change
+              Vergi strategiyası və planlaşdırması biznesin uğuru və təkamülü üçün vacibdir.
             </p>
             <p class="fs-1-7  ls-2 lh-30">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat harum expedita, voluptate ullam nam est
-              totam aut repudiandae maxime earum. Corporis asperiores laboriosam adipisci totam autem omnis beatae
-              nostrum voluptatum?
+              FA Audit Consulting xidmət etdiyimiz sənayələrinin hər biri üçün nəzərdə tutulmuş ixtisaslaşmış vergi
+              xidmətləri - sığorta təşkilatları, qeyri-kommersiya təşkilatları və işçilərin mükafatlandırma planları -
+              hər bir sektorun unikal vergi ehtiyaclarına, çətinliklərinə və imkanlarına kömək göstərir.
             </p>
-            <p class="fs-2-5 fw-600 mt-5">
-              Xarici ticarət
-            </p>
+
             <p class="fs-1-7  ls-2 my-5 lh-30">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas, inventore corporis corrupti
-              amet debitis iste ex ipsum. Neque, tenetur. Nulla consequuntur, alias pariatur eum facere enim vel
-              provident. Laudantium dolorum porro corporis explicabo autem in totam nesciunt quas quia facere non beatae
-              maiores consequuntur assumenda et saepe tempora, inventore dolores est obcaecati labore culpa maxime. Sit
-              in labore sed doloribus ut velit atque cum tempora quas earum repellat quos fuga aut aperiam unde animi
-              ab, aspernatur laudantium dolores sint. Quasi quidem optio et inventore dolor dolorem. Recusandae iste
-              iure fugiat, fugit accusantium tempore excepturi alias quidem soluta, accusamus possimus voluptate vel
-              impedit consequuntur hic harum velit adipisci officia vitae delectus obcaecati. Ducimus voluptatibus
-              magnam voluptates, eveniet dolorum nemo vitae dolore est nulla eaque ad, impedit voluptate sunt. Error
-              explicabo provident natus tempora sequi, cumque omnis totam nesciunt accusamus ipsa delectus nam
-              cupiditate nobis dicta quia facilis? Explicabo, inventore animi?
-            </p>
-            <p class="fs-2-5 fw-600 mt-5">
-              Xarici ticarət
-            </p>
-            <p class="fs-1-7  ls-2 my-5 lh-30">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos voluptas, inventore corporis corrupti
-              amet debitis iste ex ipsum. Neque, tenetur. Nulla consequuntur, alias pariatur eum facere enim vel
-              provident. Laudantium dolorum porro corporis explicabo autem in totam nesciunt quas quia facere non beatae
-              maiores consequuntur assumenda et saepe tempora, inventore dolores est obcaecati labore culpa maxime. Sit
-              in labore sed doloribus ut velit atque cum tempora quas earum repellat quos fuga aut aperiam unde animi
-              ab, aspernatur laudantium dolores sint. Quasi quidem optio et inventore dolor dolorem. Recusandae iste
-              iure fugiat, fugit accusantium tempore excepturi alias quidem soluta, accusamus possimus voluptate vel
-              impedit consequuntur hic harum velit adipisci officia vitae delectus obcaecati. Ducimus voluptatibus
-              magnam voluptates, eveniet dolorum nemo vitae dolore est nulla eaque ad, impedit voluptate sunt. Error
-              explicabo provident natus tempora sequi, cumque omnis totam nesciunt accusamus ipsa delectus nam
-              cupiditate nobis dicta quia facilis? Explicabo, inventore animi?
+              Yüksək keyfiyyətli xidmət FA Audit Consulting komandasının bütün xidmətləri üçün əsasdır. Bu, səylə
+              layihənin idarə edilməsi və layihənin planlaşdırılması, potensial vergi məsələləri ətrafında açıq dialoqun
+              davam etdirilməsi üçün müştərilərimizə özəl və asan başa düşülən vergi sənədləri vasitəsilə vergi
+              təcrübəsində nümayiş etdirilir
             </p>
           </div>
           <div class="col-12 col-lg-3">
             <div class="related-articles ">
               <div class="fs-2-5 fw-600 ls-2">
-                Related Articles
+                Bənzər Xəbərlər
               </div>
               <div class="article-card d-flex flex-column my-4">
-                <div class="darkgray fs-1-9 ls-2 my-2">News 1</div>
+                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər 1</div>
                 <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
-                  <p class="fs-2 hover-cc secondary">Find out more</p>
+                <a href="news.html" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                  <p class="fs-2 hover-cc secondary">Davamını oxu</p>
                   <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
                 </a>
               </div>
               <div class="article-card d-flex flex-column my-4">
-                <div class="darkgray fs-1-9 ls-2 my-2">News 2</div>
+                <div class="darkgray fs-1-9 ls-2 my-2">Xəbərlər 2</div>
                 <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
-                  <p class="fs-2 hover-cc secondary">Find out more</p>
+                <a href="news.html" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                  <p class="fs-2 hover-cc secondary">Davamını oxu</p>
                   <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
                 </a>
               </div>
               <div class="article-card d-flex flex-column my-4">
-                <div class="darkgray fs-1-9 ls-2 my-2"> News 3</div>
+                <div class="darkgray fs-1-9 ls-2 my-2"> Xəbərlər 3</div>
                 <p class="fs-2 ls-2 my-3 fw-600">Lorem Dolar</p>
-                <a href="#" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
-                  <p class="fs-2 hover-cc secondary">Find out more</p>
+                <a href="news.html" class="fs-2 hover-cc secondary d-flex align-items-center hover-right">
+                  <p class="fs-2 hover-cc secondary">Davamını oxu</p>
                   <i class="fas fa-long-arrow-alt-right ms-3 mt-1"></i>
                 </a>
               </div>
