--- a/ticaret.html
+++ b/ticaret.html
@@ -448,7 +448,7 @@
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Kənd Təsərüfatı,emal</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Ticarət və Pərakəndəçilik </p>
                     </div>
                 </div>
             </div>
@@ -456,7 +456,7 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6    service-title">Kənd Təsərüfatı,emal</div>
+                    <div class="col-6    service-title">Ticarət və Pərakəndəçilik</div>
 
                 </div>
             </div>
@@ -553,7 +553,7 @@
                     <div class="col-12 col-lg-9">
                         <div class="service-card-container d-flex flex-wrap">
                             <div class="main-card">
-                                <p class="fs-2 fw-500 ls-2 primary">Kənd Təsərüfatı,emal</p>
+                                <p class="fs-2 fw-500 ls-2 primary">Ticarət və Pərakəndəçilik</p>
                                 <!-- <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p> -->
                             </div>
                             <!-- <div class="side-card ">
@@ -574,24 +574,44 @@
                 </div>
               </div> -->
                             <p class="fw-600 fs-3 main-title mt-5">
-                                Ailə kənd təsərrüfatlarından tutmuş üzüm bağlarına, qida istehsalına qədər bütün
-                                etaplarda biz sizi xidmətlərimizlə əhatə etməyə hazırıq.
+                                Satış kanalınızın performansını və ticarət investisiyalarınızı izləmək üçün güvənilir
+                                metodologiyalar təklif edirik.
                             </p>
 
-                            <p class="text fs-2 my-5">
-                                İstehlakçılar kənd təsərrüfatı, emal sahələrində təhlükəsizliyə və şəffaflığa əhəmiyyət
-                                verirlər. Bu sahədə gigiyena, audit və sertifikatlaşdırma güvənilir məhsulları və
-                                etibarlı brendlərin təməlini qurur. Artan istehlak tələblərinə cavab vermək üçün kənd
-                                təsərrüfatı sahəsi real vaxt rejimində sertifikatlaşdırma audit monitorinqi və real
-                                həllərlə risklərin aradan qaldırılmasına əsaslanan audit yoxlanışından keçməsi önəmlidi.
+                            <ul class="ms-4 my-3">
+                                <p class="  fs-2-5 my-5"> Pərakəndə Satışda İcra Ölçüsü məhsulun mövcudluğu
+                                    üçün pərakəndə və yerli mağazalarda audit yoxlamasından, keyfiyyətin və uyğunluğun,
+                                    promosyonların, nümayişlərin və s. yerləşdirilməsi və yoxlanılmasından ibarətdir:
+                                </p>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Qiymətləndirmə
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Texniki və Əməliyyat Sistemləri və Sahə Quraşdırması
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Sahə İzləmə və Keyfiyyət İdarəetmə Sistemləri
+                                </li>
+                                <li class="fs-1-9 fw-500 my-3">
+                                    Onlayn Portal vasitəsilə Məlumatların Emalı və Hesabatın Çatdırılması
+                                </li>
+                            </ul>
+                            <p class="fw-600 fs-2-5 main-title mt-5">
+                                Niyə bizim həllimiz unikaldır?
                             </p>
 
-                            <p class="text fs-2 my-5">
-                                Kənd Təsərrüfatı və emal sahəsi üzərinə ixtisaslaşmış qrupumuzun bir çox təsərrüfat
-                                təşkilatlarında çoxsaylı aqrobiznes auditi və konsultasiyası təcrübələri var. Bizim FA
-                                Audit Consulting komandamızın aqrobiznes ixtisas qrupumuzun üzvləri təsərrüfat
-                                idarəçiliyi üzrə peşakar fəaliyyət göstərir və kənd təsərrüfatı müştərilərimizin
-                                məhsuldarlığını və gəlirliliyini artıra biləcək təcrübə və biliyə malikdirlər.
+                            <p class=" fs-2 main-title mt-5">
+                                FA Audit Consulting Azərbaycanda uzun illərdir müxtəlif ticarət və pərakəndəçilik
+                                tədqiqatları üzrə əsaslandırılmış güclü audit təcrübəsinə malikdir. Müxtəlif bazarlarda
+                                istehlakçılar və rəqiblər müxtəlif yollarla və fərqli sürətlə inkişaf edirlər. Buna görə
+                                məhsulun dəqiq yerləşdirilməsi çox vacibdir. Belə bir mühitdə biznes qısamüddətli
+                                performansa və uzunmüddətli davamlılığa nail olmaq üçün strateji variantları
+                                planlaşdırmalı və onları effektiv şəkildə həyata keçirməlidir.
+                            </p>
+                            <p class=" fs-2 main-title mt-5">
+                                Əgər siz Ticarət və Pərakəndəçilik sahəsində müxtəlif bazarlarda effektiv tətbiq və ya
+                                daha çox imkanlara nail olmaq üçün axtarışdasınızsa, FA Audit Consulting sizə lazımı
+                                yardımı göstərmək üçün hazırdı
                             </p>
 
 
