--- a/xestexana.html
+++ b/xestexana.html
@@ -448,7 +448,8 @@
                         <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
                         </p>
-                        <p class="fs-1-9 primary hover-cc custom-before">Kənd Təsərüfatı,emal</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Xəstəxanalar və
+                            hospitallar </p>
                     </div>
                 </div>
             </div>
@@ -456,7 +457,8 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6    service-title">Kənd Təsərüfatı,emal</div>
+                    <div class="col-6    service-title">Xəstəxanalar və
+                        hospitallar</div>
 
                 </div>
             </div>
@@ -553,7 +555,7 @@
                     <div class="col-12 col-lg-9">
                         <div class="service-card-container d-flex flex-wrap">
                             <div class="main-card">
-                                <p class="fs-2 fw-500 ls-2 primary">Kənd Təsərüfatı,emal</p>
+                                <p class="fs-2 fw-500 ls-2 primary">Xəstəxanalar və hospitallar</p>
                                 <!-- <p class="fs-2-5 fw-600 mt-3">Global transparency report 2020</p> -->
                             </div>
                             <!-- <div class="side-card ">
@@ -574,24 +576,23 @@
                 </div>
               </div> -->
                             <p class="fw-600 fs-3 main-title mt-5">
-                                Ailə kənd təsərrüfatlarından tutmuş üzüm bağlarına, qida istehsalına qədər bütün
-                                etaplarda biz sizi xidmətlərimizlə əhatə etməyə hazırıq.
+                                Səhiyyə və xəstəxanalar auditinin önəmi nədir?
                             </p>
 
-                            <p class="text fs-2 my-5">
-                                İstehlakçılar kənd təsərrüfatı, emal sahələrində təhlükəsizliyə və şəffaflığa əhəmiyyət
-                                verirlər. Bu sahədə gigiyena, audit və sertifikatlaşdırma güvənilir məhsulları və
-                                etibarlı brendlərin təməlini qurur. Artan istehlak tələblərinə cavab vermək üçün kənd
-                                təsərrüfatı sahəsi real vaxt rejimində sertifikatlaşdırma audit monitorinqi və real
-                                həllərlə risklərin aradan qaldırılmasına əsaslanan audit yoxlanışından keçməsi önəmlidi.
-                            </p>
 
-                            <p class="text fs-2 my-5">
-                                Kənd Təsərrüfatı və emal sahəsi üzərinə ixtisaslaşmış qrupumuzun bir çox təsərrüfat
-                                təşkilatlarında çoxsaylı aqrobiznes auditi və konsultasiyası təcrübələri var. Bizim FA
-                                Audit Consulting komandamızın aqrobiznes ixtisas qrupumuzun üzvləri təsərrüfat
-                                idarəçiliyi üzrə peşakar fəaliyyət göstərir və kənd təsərrüfatı müştərilərimizin
-                                məhsuldarlığını və gəlirliliyini artıra biləcək təcrübə və biliyə malikdirlər.
+
+                            <p class=" fs-2 main-title mt-5">
+                                Xəstəxanalar və Hospitallar sahəsində daxili auditinin məqsədi xəstəyə qulluq və daxili
+                                prosesləri qiymətləndirmək, təhlil etmək və təkmilləşdirmək üçün rəsmi prosesi
+                                hazırlamaq və o prosesləri izləməkdir. Xarici Auditin məqsədi isə adətən sığorta
+                                iddiaları prosesində bütün tərəflərə ədalətli və dəqiq ödəniş edildiyini təmin etməkdir.
+                            </p>
+                            <p class=" fs-2 main-title mt-5">
+                                Səhiyyə sahəsində auditlər çox vaxt uyğunluğun və pasientlərin məmnunluğunun
+                                ölçülməsində həlledici rol oynayır. Bununla belə, auditlər maliyyə itkilərinə məruz
+                                qalma riskini azaldaraq xəstəxana və ya səhiyyə sistemlərinin risklərini azaldır. FA
+                                Audit Consulting sizin bu il olan audit risklərinizi azalda və məhsuldarlığınızı artıra
+                                bilər
                             </p>
 
 
